# smw

./: .gitignore  CMakeLists.txt  Makefile  build-em.sh
src/: lm.c  main.c  smw_00.c  smw_01.c  smw_03.c  smw_04.c  smw_05.c  smw_0c.c  smw_cpu_infra.c  smw_rtl.c
web/: index.html
web/smw/: SMW.data  SMW.html  SMW.js  SMW.wasm
